tests/ui/parser/misspelled-keywords/impl-return.rs
fn code() -> Impl Display {}
//~^ ERROR expected one of

fn main() {}
